Add extra  style to css file

--- a/dummy/dummy.css
+++ b/dummy/dummy.css
@@ -3,7 +3,7 @@
     align-items: baseline;
     background-color: lightgreen;
     padding: auto;
-    border: 1px solid;
+    border: 1px solid grey;
 }
 ul {
     word-spacing: 20px;
